assets/css/main.scss
/* ... */
/******** language button ********/

.language-wrapper {
  width: 12%;
  margin-left: 40px;
}

.language-wrapper .lang-list {
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 20px;
  padding-right: 20px;
  border: 2px solid #000;
  border-radius: 5px;
}

select.round {
  background-image:
    linear-gradient(45deg, transparent 50%, #000 50%),
    linear-gradient(135deg, #000 50%, transparent 50%),
    radial-gradient(#fff 70%, transparent 72%);
  background-position:
    calc(100% - 20px) calc(1em + 2px),
    calc(100% - 15px) calc(1em + 2px),
    calc(100% - .5em) .5em;
  background-size:
    5px 5px,
    5px 5px,
    1.5em 1.5em;
  background-repeat: no-repeat;
  appearance: none;
}

select.round:focus {
  background-image:
    linear-gradient(45deg, #000 50%, transparent 50%),
    linear-gradient(135deg, transparent 50%, #000 50%),
    radial-gradient(#fff 70%, transparent 72%);
  background-position:
    calc(100% - 15px) 1em,
    calc(100% - 20px) 1em,
    calc(100% - .5em) .5em;
  background-size:
    5px 5px,
    5px 5px,
    1.5em 1.5em;
  background-repeat: no-repeat;
  outline: 0;
}



/********** more links **********/

.more-linkes-wrapper {
  margin-top: 30px;
  margin-bottom: 30px;
}

.more-linkes-wrapper h3 {
  color: #fff;
  margin-left: 30px;
  margin-right: 30px;
}

.more-linkes-wrapper ul {
  list-style: none;
  padding-left: 20px;
  margin-top: 20px;
}

.more-linkes-wrapper ul li a {
  color: #0b75b4;
  transition: all .3s ease;
}

.more-linkes-wrapper ul li a .fa {
  color: #fff;
}

.more-linkes-wrapper ul li a:hover {
  color: #fff;
  text-decoration: none;
}








@media only screen and (max-width:991px) {
  .navigation .navbar-nav {
    text-align: center;
  }
  .navigation .navbar-expand-lg .navbar-nav .nav-link {
    padding: .5rem;
    font-size: 24px;
  }
  .menu-section, .tableofcontent-wrapper, .search-wrapper {
    display: none!important;
  }
  .dropdown-menu.show {
    top: 150px!important;
    overflow-y: auto;
  }

  .dropdown-menu.show.toc {
    width: 260px;
    left: -40px!important;
    top: 20px!important;
    transform: translate3d(-45px, 60px, 0px)!important;

  }

  .content-wrapper {
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 15px;
  }

  .side-nav-section {
    width: 350px;
  }

  .side-nav-section .topic-title {
    list-style: none;
  }

  .md-order-2 {
    order: 2;
  }
  .footer-navigation ul li {
    padding: 10px 10px;
  }

  .navigation {
    margin-bottom: 20px;
  }

  .dropdown-section .btn {
    box-shadow: unset!important;
    border: 1px solid #0b75b4;
  }
  .dropdown-toggle::after {
    display: none;
  }

  .language-wrapper {
    width: 18%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 26px;
  }

  .navbar-collapse .navbar-nav {
    margin-top: 20px;
  }

  button:focus {
    outline: 5px auto #0b75b4;
  }

  .navigation .navbar-collapse {
    position: absolute;
    top: 86px;
    z-index: 1;
    background: #fff;
    width: 100%;
    left: 0;
    margin-bottom: 20px;
    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.1);
  }

  .navigation-default.sticky.navigation .navbar-collapse {
    top: 59px;
    
  }

  .navigation-default.sticky {
    margin-bottom: 0;
    box-shadow: unset;
  }
  
}

@media only screen and (max-width:767px) {
  .navigation img {
    width: 150px;
  }
  .menu-section, .tableofcontent-wrapper, .search-wrapper {
    display: none;
  }
  .dropdown-menu.show {
    top: 150px!important;
    overflow-y: auto;
  }

  .dropdown-menu.show.toc {
    width: 260px;
    left: -40px!important;
    top: 20px!important;
  }

  .content-wrapper {
    padding-left: 15px;
    padding-right: 15px;
    
  }

  .side-nav-section {
    width: 350px;
  }

  .side-nav-section .topic-title {
    list-style: none;
  }

  .md-order-2 {
    order: 2;
  }
  .footer-navigation ul li {
    padding: 10px 10px;
  }

  .navigation {
    margin-bottom: 20px;
  }

  .dropdown-section .btn {
    box-shadow: unset!important;
    border: 1px solid #0b75b4;
  }

  .dropdown-section .dropdown .btn {
    width: 100%;
    font-size: 18px;
  }

  .dropdown-section .dropdown .btn .fa {
    padding-left: 15px;
  }
  
  .language-wrapper {
    width: 24%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 26px;
  }

  

 
 
}

